--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@ h2{
     max-width: 350px;
 }
 
+.tr{
+    margin-top: 10px;
+}
+
 .container {
     background-color: #3b4049;
     padding: 20px;
